--- a/src/blog/src/styles/styles.sass
+++ b/src/blog/src/styles/styles.sass
@@ -1,2 +1,10 @@
 @import "../../node_modules/bulma/sass/utilities/_all"
 @import "../../node_modules/bulma/sass/grid/columns"
+@import "../../node_modules/bulma/sass/layout/section"
+@import "../../node_modules/bulma/sass/components/nav"
+@import "../../node_modules/bulma/sass/base/_all"
+@import "../../node_modules/bulma/sass/elements/title"
+
+.info-box
+  padding: 5em
+  font-size: 0.8em
