--- a/src/react-blog-example/src/styles/styles.sass
+++ b/src/react-blog-example/src/styles/styles.sass
@@ -5,6 +5,22 @@
 @import "../../node_modules/bulma/sass/base/_all"
 @import "../../node_modules/bulma/sass/elements/title"
 
+.nav
+  background: #484848
+  a
+  	color: white
+  	&:hover
+  		color: white
+  		border-bottom: 2px solid red
+  p
+  	color: white
 .info-box
-  padding: 5em
+  border: 1px solid #484848
+  padding: 1em
+  margin: 0em 4em 4em 4em
+  font-size: 0.8em
+
+.info-box.cat
+  border: none
+  margin: 0em
   font-size: 0.8em
