added syntax highlight

--- a/static/main.sass
+++ b/static/main.sass
@@ -1,3 +1,4 @@
+$family-primary: 'Montserrat'
 @import "../node_modules/bulma/sass/utilities/_all"
 @import "../node_modules/bulma/sass/grid/columns"
 @import "../node_modules/bulma/sass/layout/_all.sass"
@@ -5,16 +6,16 @@
 @import "../node_modules/bulma/sass/base/_all"
 @import "../node_modules/bulma/sass/elements/title"
 @import "../node_modules/bulma/sass/elements/content"
+@import url('https://fonts.googleapis.com/css?family=Montserrat')
+@import "./prism.css"
 
 .nav
   background: #484848
-  a
+  .nav-right a
   	color: white
   	&:hover
   		color: white
   		border-bottom: 2px solid red
-  h1
-  	color: white
 
 .info-box
   border: 1px solid #484848
