--- a/views/snippets/base.html
+++ b/views/snippets/base.html
@@ -22,7 +22,7 @@
       </div>
 
       {% block javascript %}
-      <!--<script src=""></script>-->
+      <script src="/assets/prism.js"></script>
       {% endblock javascript %}
   </body>
 </html>
