--- a/views/post_page.html
+++ b/views/post_page.html
@@ -1,6 +1,13 @@
-{% extends 'snippets/base.html' %}
+{% extends 'index.html' %}
 {% block title %}{{ post.title }}{% endblock title %}
 
-{% block page_content %}
-{{ post.body }}
-{% endblock page_content %}
+{% block post_content %}
+<div class="section">
+<div class="container">
+<div class="content">
+<h1>{{ post.title | capitalize }}</h1>
+{{ post.html | safe }}
+</div>
+</div>
+</div>
+{% endblock %}
