--- a/views/snippets/navbar.html
+++ b/views/snippets/navbar.html
@@ -1,9 +1,9 @@
 <nav class="nav">
   <div class="nav-left"></div>
   <div class="nav-center">
-  <h1 class="nav-item title is-3" href="/">
+  <a class="nav-item title is-5" href="/">
     geekodour's blog
-  </h1>
+  </a>
   </div>
   <span id="nav-toggle" class="nav-toggle">
   <span></span>
