--- a/views/snippets/base.html
+++ b/views/snippets/base.html
@@ -23,6 +23,7 @@
 
       {% block javascript %}
       <script src="/assets/prism.js"></script>
+      <script src="/assets/main.js"></script>
       {% endblock javascript %}
   </body>
 </html>
