added watch:dev mode

--- a/static/main.sass
+++ b/static/main.sass
@@ -20,6 +20,7 @@ $family-primary: 'Montserrat'
 
 .info-box
   border: 1px solid #484848
+  background-color: blue
   border-radius: 1em
   padding: 1em
   margin: 0em 4em 4em 4em
