--- a/views/snippets/base.html
+++ b/views/snippets/base.html
@@ -12,6 +12,9 @@
     <link href="/assets/main.css" rel="stylesheet">
     {% endblock %}
 
+    {% block inlinejavascript %}
+    {% endblock %}
+
   </head>
 
   <body class="">
