added proper disqus support

--- a/views/post_page.html
+++ b/views/post_page.html
@@ -6,7 +6,8 @@
   window.blogInfo = {
           pageType: 'post',
           postId: {{post.id}},
-          comment_system: "{{ comment_system }}"
+          comment_system: "{{ comment_system }}",
+          disqus_id: "{{ disqus_id }}"
   };
   </script>
 {% endblock %}
