--- a/views/post_page.html
+++ b/views/post_page.html
@@ -6,6 +6,7 @@
   window.blogInfo = {
           pageType: 'post',
           postId: {{post.id}},
+          comment: {{ comment|stringify|safe }},
           comment_system: "{{ comment_system }}",
           disqus_id: "{{ disqus_id }}",
           firebaseEnabled: {{firebaseEnabled}}
@@ -17,13 +18,24 @@
 <div class="section">
   <div class="container">
     <div class="content">
+      <div class="post-header">
+      {% for label in post.labels %}
+      <span class="tag">{{ label.name }}</span>
+      {% endfor %}
+      <span class="is-pulled-right">{{ post.date|date }}</span>
+      </div>
       <h1>{{ post.title | capitalize }}</h1>
       {{ post.html | safe }}
     </div>
   </div>
 </div>
-<div class="">
-  <div class="container">
+<div {% if comment.isDisqus %}class="section"{% endif %}>
+  <div id="comments_container"></div>
+  <div id="loadmore_container" class="has-text-centered"></div>
+</div>
+{% endblock %}
+
+<!--
           {% if firebaseEnabled %}
           <div class="section has-text-centered is-fluid">
             <button id="signin_button" class="button is-medium is-success">Sign In to Comment!</button>
@@ -37,8 +49,4 @@
             </div>
           </div>
           {% endif %}
-          <div id="comments_container"></div>
-          <div id="loadmore_container" class="has-text-centered"></div>
-  </div>
-</div>
-{% endblock %}
+-->
