--- a/views/snippets/labelsBox.html
+++ b/views/snippets/labelsBox.html
@@ -1,7 +1,12 @@
-<div class="">
-  <ul>
-  {% for label in labels %}
-  <li><a href="/category/{{ label.name }}">{{ label.name }}</a></li>
-  {% endfor %}
-  </ul>
+<div class="card">
+  <div class="card-content">
+    <div class="content">
+      <small>categories</small>
+      <ul>
+      {% for label in labels %}
+      <li><a href="/category/{{ label.name }}">{{ label.name }}</a></li>
+      {% endfor %}
+      </ul>
+    </div>
+  </div>
 </div>
