about to delete old dev

--- a/views/index.html
+++ b/views/index.html
@@ -18,19 +18,22 @@
             {% block post_content %}
               <div class="section post_content">
                 <div class="post-header">
-                        recent posts
+                  <h4 class="">recent posts</h4>
                 </div>
                 <ul>
                 {% for post in posts %}
                 <li class="post_list_item">
-                  <a href="/posts/{{ post.title|slug }}">{{ post.title }}</a>
+                  <a href="/posts/{{ post.slug }}">{{ post.title }}</a>
                   <span class="is-pulled-right">{{ post.date|date }}</span>
                 </li>
                 {% endfor %}
                 </ul>
                 <div class="container has-text-centered">
+                {% if pagination.prev %}
+                  <a class="" href="{{pagination.prev}}">prev</a>
+                {% endif %}
                 {% if pagination.next %}
-                <a class="" href="{{pagination.next}}">next</a>
+                  <a class="" href="{{pagination.next}}">next</a>
                 {% endif %}
                 </div>
               </div>
