--- a/views/snippets/base.html
+++ b/views/snippets/base.html
@@ -24,9 +24,8 @@
       {% include 'snippets/footer.html' %}
 
       {% block javascript %}
-      {% if firebaseEnabled %}
-      <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script>
-      {% endif %}
+      {% if comment.isGithubAuth %} <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script> {% endif %}
+      {% if comment.isDisqus %} <script id="dsq-count-scr" src="//geekodour.disqus.com/count.js" async></script> {% endif %}
       <script src="/assets/prism.js"></script>
       <script src="/assets/main.js"></script>
       {% endblock javascript %}
