--- a/views/snippets/labelsBox.html
+++ b/views/snippets/labelsBox.html
@@ -4,7 +4,7 @@
       <small>categories</small>
       <ul>
       {% for label in labels %}
-      <li><a href="/category/{{ label.name }}">{{ label.name }}</a></li>
+      <li><a href="/category/{{ label.slug }}">{{ label.name }}</a></li>
       {% endfor %}
       </ul>
     </div>
