about to change main.js to take variables from json file instead of nunjucks passed window.blogInfo

--- a/static/main.sass
+++ b/static/main.sass
@@ -9,11 +9,12 @@ $primary: black
 @import "../node_modules/bulma/sass/elements/button"
 @import "../node_modules/bulma/sass/elements/image"
 @import "../node_modules/bulma/sass/elements/tag"
+@import "../node_modules/bulma/sass/elements/notification"
 @import "../node_modules/bulma/sass/elements/content"
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:800')
 @import url('https://fonts.googleapis.com/css?family=Merriweather+Sans:300')
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed')
-@import "./prism.css"
+@import "./vendor/prism.css"
 
 body
   background-color: #FFFF83
@@ -32,6 +33,8 @@ body
 #loadmore_container
   margin-top: 2em
 
+.is-full-width
+  width: 100%
 
 .content
   h1,h2,h3,h4
