--- a/themes/newbulmadefault/static/css/main.sass
+++ b/themes/newbulmadefault/static/css/main.sass
@@ -1,20 +1,19 @@
 $primary: black
-@import "../node_modules/bulma/sass/utilities/_all"
-@import "../node_modules/bulma/sass/base/_all"
-@import "../node_modules/bulma/sass/layout/_all"
-@import "../node_modules/bulma/sass/grid/columns"
-@import "../node_modules/bulma/sass/components/_all"
-@import "../node_modules/bulma/sass/elements/box"
-@import "../node_modules/bulma/sass/elements/form"
-@import "../node_modules/bulma/sass/elements/button"
-@import "../node_modules/bulma/sass/elements/image"
-@import "../node_modules/bulma/sass/elements/tag"
-@import "../node_modules/bulma/sass/elements/notification"
-@import "../node_modules/bulma/sass/elements/content"
+@import "~bulma/sass/utilities/_all"
+@import "~bulma/sass/base/_all"
+@import "~bulma/sass/layout/_all"
+@import "~bulma/sass/grid/columns"
+@import "~bulma/sass/components/_all"
+@import "~bulma/sass/elements/box"
+@import "~bulma/sass/elements/form"
+@import "~bulma/sass/elements/button"
+@import "~bulma/sass/elements/image"
+@import "~bulma/sass/elements/tag"
+@import "~bulma/sass/elements/notification"
+@import "~bulma/sass/elements/content"
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:800')
 @import url('https://fonts.googleapis.com/css?family=Merriweather+Sans:300')
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed')
-@import "./vendor/prism.css"
 
 body
   background-color: #FFFF83
