--- a/themes/newbulmadefault/static/css/main.sass
+++ b/themes/newbulmadefault/static/css/main.sass
@@ -35,6 +35,9 @@ body
 .is-full-width
   width: 100%
 
+.no-round
+  border-radius: 0
+
 .content
   h1,h2,h3,h4
     font-family: 'Open Sans', sans-serif
