updated the-plain to gitpushblog

--- a/themes/the-plain/static/css/main.scss
+++ b/themes/the-plain/static/css/main.scss
@@ -1,3 +1,4 @@
+@import 'syntax';
 body {
   font-size: 14px;
   line-height: 20px;
@@ -55,7 +56,7 @@ blockquote {
   -webkit-animation-fill-mode: both;
   -webkit-animation-name: bounce;
   a {
-    background: #ddd url("gravatar_wrapper.png");
+    background: #ddd url("../images/gravatar_wrapper.png");
     color: #000;
     text-decoration: none;
     font-weight: 700;
